[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", optional = true }

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
tonic = { version = "0.10", optional = false }
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
bytes = "1"
chrono = "0.4"
rdkafka = { version = "0.29", optional = true }
redis = { version = "0.22", features = [
    "default",
    "tokio-comp",
], optional = true }
hostname = "^0.3"
crossbeam-skiplist = "*"
crc = "3.0"
aes = "0.8.4"
ctr = "0.9.2"
regex = "1"
elasticsearch = { version = "7.10.1-alpha.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio-postgres = { version = "0.7.8", optional = true }
postgres-types = { version = "0.2.5", optional = true }

kube = { version = "0.85.0", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.19.0", features = ["v1_27"], optional = true }
tower = { version = "0.4.13", optional = true }
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.http]
version = "0.2"
optional = true

[dependencies.hyper]
version = "0.14.14"
optional = true

[dependencies.tower-service]
version = "0.3.2"
optional = true

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"


[features]
pgx = ["tokio-postgres", "postgres-types"]
kafkax = ["rdkafka", "futures"]
redisx = ["redis"]
elasticx = ["elasticsearch"]
logx = ["tracing-subscriber"]
rpcx = [
    "http",
    "hyper",
    "tower-service",
    "kube",
    "k8s-openapi",
    "futures",
    "tower",
]
full = ["kafkax", "redisx", "elasticx", "rpcx", "pgx"]
default = ["futures"]

[dev-dependencies]
common = { path = ".", features = ["full"] }
tokio-stream = { version = "0.1.12" }
tonic = { version = "0.10" }
prost = "0.12"
prost-types = "0.12"
