[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", optional = true }

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
] }
tonic = { version = "0.10", optional = false }
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
bytes = "1"
chrono = "0.4"
rdkafka = { version = "0.29", optional = true }
redis = { version = "0.32", features = [
    "default",
    "tokio-comp",
    "r2d2",
    "connection-manager",
], optional = true }
hostname = "^0.3"
crossbeam-skiplist = "*"
crc = { version = "3.0", optional = true }
aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
regex = "1"
elasticsearch = { version = "7.10.1-alpha.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio-postgres = { version = "0.7.8", optional = true }
postgres-types = { version = "0.2.5", optional = true }

kube = { version = "0.85.0", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.19.0", features = ["v1_27"], optional = true }
tower = { version = "0.4.13", optional = true }
rand = "0.8.5"
rocksdb = { version = "0.21.0", optional = true, default-features = false, features = [
    "lz4",
] }
sled = { version = "0.34", optional = true }
aes-gcm-siv = { version = "0.11", optional = true }
derive-new = "0.7.0"
hex = "0.4.3"
sm4 = { version = "0.5.1", optional = true }
rsa = { version = "0.9.6", optional = true, features = ["pem"] }
sm2 = { version = "0.13.3", optional = true }
sha2 = { version = "0.10", optional = true, features = ["oid"] }
base64 = { version = "0.22.1", optional = true }
tokio-stream = { version = "0.1.12", optional = true }
diesel = { version = "2.2", features = ["postgres", "r2d2"], optional = true }
diesel_migrations = { version = "2.2", optional = true }
num_cpus = { version = "1.16.0" }
aes-gcm = { version = "0.10", optional = true }
pkcs8 = { version = "0.10.2", optional = true }
base64ct = { version = "1.6.0", optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "json",
    "bigdecimal",
    "uuid",
    "chrono",
], optional = true }
bigdecimal = { version = "0.4.6", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
rust-s3 = { version = "0.35.1", optional = true, features = ["with-tokio"] }
aws-region = { version = "0.25.5", optional = true, features = ["serde"] }

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.http]
version = "0.2"
optional = true

[dependencies.hyper]
version = "0.14.14"
optional = true

[dependencies.tower-service]
version = "0.3.2"
optional = true

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"


[features]
pgx = ["tokio-postgres", "postgres-types", "concurrency"]
kafkax = ["rdkafka", "futures"]
redisx = ["redis"]
elasticx = ["elasticsearch"]
logx = ["tracing-subscriber"]
rpcx = [
    "http",
    "hyper",
    "tower-service",
    "kube",
    "k8s-openapi",
    "futures",
    "tower",
]
full = [
    "kafkax",
    "redisx",
    "elasticx",
    "rpcx",
    "pgx",
    "crypto",
    "checksum",
    "concurrency",
    "dbx",
    "iox",
]
default = ["futures"]
crypto = [
    "aes",
    "ctr",
    "aes-gcm-siv",
    "sm4",
    "rsa",
    "sm2",
    "sha2",
    "base64",
    "aes-gcm",
    "pkcs8",
    "base64ct",
]
checksum = ["crc"]
concurrency = ["pin-project-lite", "redisx"]
dbx = []
iox = ["tokio-stream", "futures"]
rocksdb-enable = ["rocksdb"]
sled-enable = ["sled"]
diesel-enable = ["diesel", "diesel_migrations"]
cache = []
sqlx-enable = ["sqlx", "bigdecimal"]
fsx = ["rust-s3", "aws-region"]

[dev-dependencies]
tokio-stream = { version = "0.1.12" }
tonic = { version = "0.10" }
prost = "0.12"
prost-types = "0.12"
tracing-subscriber = "0.3"
hex-literal = "0.4.1"
